working on broker logic