@@ -35,6 +35,7 @@ import io.sapl.testutil.ParserUtil;
 import io.sapl.validation.ValidatorFactory;
 import jakarta.validation.constraints.NotNull;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.Timeout;
 import reactor.core.publisher.Flux;
 import reactor.test.StepVerifier;
 import reactor.util.context.Context;
@@ -93,7 +94,7 @@ class LegacyAnnotationPolicyInformationPointLoaderTests {
         final var pipLoader = newPipLoader();
         pipLoader.loadPolicyInformationPoint(pip);
         assertThatThrownBy(() -> pipLoader.loadPolicyInformationPoint(pip)).isInstanceOf(AttributeBrokerException.class)
-                .hasMessageContaining("collission");
+                .hasMessageContaining("collision");
     }
 
     @Test
@@ -176,7 +177,7 @@ class LegacyAnnotationPolicyInformationPointLoaderTests {
         assertThat(docsProvider.getAvailableLibraries().contains("PIP"), is(true));
         assertThat(docsProvider.providedFunctionsOfLibrary("PIP").contains("x"), is(true));
         assertThat(docsProvider.isProvidedFunction("PIP.x"), is(Boolean.TRUE));
-        assertThat(new ArrayList<>(docsProvider.getDocumentation()).get(0).namespace(), is("PIP"));
+        assertThat(new ArrayList<>(docsProvider.getDocumentation()).getFirst().namespace(), is("PIP"));
     }
 
     @Test
@@ -302,8 +303,8 @@ class LegacyAnnotationPolicyInformationPointLoaderTests {
         }
 
         final var pip = new PIP();
-        assertLoadingPipThrowsAttributeBrokerException(pip, String
-                .format(AnnotationPolicyInformationPointLoader.NON_VAL_PARAMETER_AT_METHOD_S_ERROR, "x", "Object"));
+        assertLoadingPipThrowsAttributeBrokerException(pip,
+                String.format(AnnotationPolicyInformationPointLoader.NON_VAL_PARAMETER_AT_METHOD_S_ERROR, "x"));
     }
 
     @Test
@@ -510,6 +511,7 @@ class LegacyAnnotationPolicyInformationPointLoaderTests {
     }
 
     @Test
+    @Timeout(10)
     void when_evaluateUnknownAttribute_fails() throws IOException {
         final var broker     = new CachingAttributeStreamBroker();
         final var variables  = Map.of("key1", Val.of("valueOfKey"));
@@ -741,7 +743,7 @@ class LegacyAnnotationPolicyInformationPointLoaderTests {
         final var broker     = brokerWithPip(pip);
         final var variables  = Map.of("key1", Val.of("valueOfKey"));
         final var expression = ParserUtil.expression("<test.envAttribute>");
-        StepVerifier.create(expression.evaluate().contextWrite(this.constructContext(broker, variables)))
+        StepVerifier.create(expression.evaluate().log().contextWrite(this.constructContext(broker, variables)))
                 .expectNextMatches(valErrorText("INTENDED ERROR FROM TEST")).thenCancel().verify();
     }
 
@@ -798,6 +800,7 @@ class LegacyAnnotationPolicyInformationPointLoaderTests {
     }
 
     @Test
+    @Timeout(10)
     void when_unknownAttribute_called_evaluatesToError() throws IOException {
         final var broker     = new CachingAttributeStreamBroker();
         final var variables  = Map.of("key1", Val.of("valueOfKey"));
@@ -809,6 +812,7 @@ class LegacyAnnotationPolicyInformationPointLoaderTests {
     }
 
     @Test
+    @Timeout(10)
     void when_twoParamEnvironmentAttribute_calledWithOneParam_evaluatesToError()
             throws AttributeBrokerException, IOException {
         @PolicyInformationPoint(name = "test")
@@ -830,6 +834,7 @@ class LegacyAnnotationPolicyInformationPointLoaderTests {
     }
 
     @Test
+    @Timeout(10)
     void when_varArgsWithVariablesEnvironmentAttributeAndBadParamType_evaluatesToError()
             throws AttributeBrokerException, IOException {
         @PolicyInformationPoint(name = "test")
@@ -958,6 +963,7 @@ class LegacyAnnotationPolicyInformationPointLoaderTests {
     }
 
     @Test
+    @Timeout(10)
     void when_environmentAttributeButOnlyNonEnvAttributePresent_fail() throws AttributeBrokerException, IOException {
         @PolicyInformationPoint(name = "test")
         class PIP {
